beautified and responsive login, fixed navbar overlap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,5 @@
 body {
     height:100%;
-    padding-top:35px;
     font-family: oswald-medium,oswald,sans-serif;
     background-color: white;/*#35BAE8*/
 }
